fixed up spacing

--- a/public/layout/sass/_editing.scss
+++ b/public/layout/sass/_editing.scss
@@ -63,7 +63,7 @@
 		}
 
 		h4:first-child {
-			padding: 20px 0 224px 0;
+			padding: 20px 0 204px 0;
 			margin: 0;
 		}
 		
@@ -121,7 +121,7 @@
 		p {
 			font-size: 12px;
 			line-height: 17px;
-			height: 70px;
+			height: 50px;
 		}
 
 		h3 {
